<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_xl">

        <!-- App Icon/Logo -->
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/icon_size_xl"
            android:layout_height="51dp"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:alpha="0"
            android:contentDescription="@string/cd_project_icon"
            android:foreground="@mipmap/ic_launcher_foreground"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcherc_cs"
            android:tint="@color/on_primary"
            app:srcCompat="@mipmap/ic_launcherc_cs"
            tools:srcCompat="@mipmap/ic_launcherc_cs" />

        <!-- App Name -->
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.App.Headline"
            android:textColor="@color/on_primary"
            android:textSize="@dimen/text_size_display"
            android:fontFamily="sans-serif-medium"
            android:alpha="0" />

        <!-- Tagline -->
        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/splash_tagline"
            android:textAppearance="@style/TextAppearance.App.Body"
            android:textColor="@color/on_primary"
            android:textAlignment="center"
            android:alpha="0" />

    </LinearLayout>

</RelativeLayout>